Добавление адаптивной графики для блока download-menu

--- a/source/form.html
+++ b/source/form.html
@@ -24,20 +24,20 @@
           </div>
 
           <ul class="main-nav__list">
-              <li class="main-nav__item">
-                <a href="index.html">Главная</a>
+              <li>
+                <a class="main-nav__item" href="index.html">Главная</a>
               </li>
 
-              <li class="main-nav__item">
-                <a href="photo.html">Фотографии</a>
+              <li>
+                <a class="main-nav__item" href="photo.html">Фотографии</a>
               </li>
 
-              <li class="main-nav__item main-nav__item--active">
-                <a>Конкурс</a>
+              <li>
+                <a class="main-nav__item main-nav__item--active">Конкурс</a>
               </li>
 
-              <li class="main-nav__item">
-                <a href="#">HTML Academy</a>
+              <li>
+                <a class="main-nav__item" href="#">HTML Academy</a>
               </li>
             </ul>
 
