--- a/source/index.html
+++ b/source/index.html
@@ -24,20 +24,20 @@
 
           <ul class="main-nav__list">
 
-            <li class="main-nav__item main-nav__item--active">
-              <a>Главная</a>
+            <li>
+              <a class="main-nav__item main-nav__item--active">Главная</a>
             </li>
 
-            <li class="main-nav__item">
-              <a href="photo.html">Фотографии</a>
+            <li>
+              <a class="main-nav__item" href="photo.html">Фотографии</a>
             </li>
 
-            <li class="main-nav__item">
-              <a href="form.html">Конкурс</a>
+            <li>
+              <a class="main-nav__item" href="form.html">Конкурс</a>
             </li>
 
-            <li class="main-nav__item">
-              <a href="#">HTML Academy</a>
+            <li>
+              <a class="main-nav__item" href="#">HTML Academy</a>
             </li>
           </ul>
 
@@ -51,22 +51,26 @@
 
       <section class="download-menu">
         <div class="download-menu__wrapper">
-          <p class="download-menu__title">Взгляните на жизнь иначе!</p>
-          <a class="download-menu__download-link">Скачать приложение</a>
-          <ul class="download-menu__platform">
-            <li class="download-menu__item download-menu__item--apple">
-              <a>Apple</a>
-            </li>
+          <div class="container">
+            <div class="download-menu__applications">
+              <p class="download-menu__title">Взгляните на жизнь иначе!</p>
+              <a class="download-menu__download-link">Скачать приложение</a>
+              <ul class="download-menu__platform">
+                <li class="download-menu__item download-menu__item--apple">
+                  <a>Apple</a>
+                </li>
 
-            <li class="download-menu__item download-menu__item--android">
-              <a>Android</a>
-            </li>
+                <li class="download-menu__item download-menu__item--android">
+                  <a>Android</a>
+                </li>
 
-            <li class="download-menu__item download-menu__item--windows">
-              <a>Windows</a>
-            </li>
-          </ul>
-          <p class="download-menu__description">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+                <li class="download-menu__item download-menu__item--windows">
+                  <a>Windows</a>
+                </li>
+              </ul>
+              <p class="download-menu__description">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+            </div>
+          </div>
         </div>
       </section>
 
