--- a/source/photo.html
+++ b/source/photo.html
@@ -23,20 +23,20 @@
           </div>
 
           <ul class="main-nav__list">
-              <li class="main-nav__item">
-                <a href="index.html">Главная</a>
+              <li>
+                <a class="main-nav__item" href="index.html">Главная</a>
               </li>
 
-              <li class="main-nav__item main-nav__item--active">
-                <a>Фотографии</a>
+              <li>
+                <a class="main-nav__item main-nav__item--active">Фотографии</a>
               </li>
 
-              <li class="main-nav__item">
-                <a href="form.html">Конкурс</a>
+              <li>
+                <a class="main-nav__item" href="form.html">Конкурс</a>
               </li>
 
-              <li class="main-nav__item">
-                <a href="#">HTML Academy</a>
+              <li>
+                <a class="main-nav__item" href="#">HTML Academy</a>
               </li>
             </ul>
 
