Добавление иконок для download-menu

--- a/source/index.html
+++ b/source/index.html
@@ -54,21 +54,21 @@
           <div class="container">
             <div class="download-menu__applications">
               <p class="download-menu__title">Взгляните на жизнь иначе!</p>
-              <a class="download-menu__download-link">Скачать приложение</a>
+              <a href="#" class="download-menu__download-link">Скачать приложение</a>
               <ul class="download-menu__platform">
-                <li class="download-menu__item download-menu__item--apple">
-                  <a>Apple</a>
+                <li>
+                  <a class="download-menu__item download-menu__item--apple"><span class="visually-hidden">Apple</span></a>
                 </li>
 
-                <li class="download-menu__item download-menu__item--android">
-                  <a>Android</a>
+                <li>
+                  <a class="download-menu__item download-menu__item--android"><span class="visually-hidden">Android</span></a>
                 </li>
 
-                <li class="download-menu__item download-menu__item--windows">
-                  <a>Windows</a>
+                <li>
+                  <a class="download-menu__item download-menu__item--microsoft"><span class="visually-hidden">Microsoft</span></a>
                 </li>
               </ul>
-              <p class="download-menu__description">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+              <p class="download-menu__description">Доступно для iPhone, iPad, Android,<br> Windows Phone, OS X, Windows 8</p>
             </div>
           </div>
         </div>
