--- a/source/form.html
+++ b/source/form.html
@@ -176,30 +176,36 @@
     </main>
 
     <footer class="page-footer">
-      <div class="page-footer__pink-logo">
-        <a>
-          <img src="../img/logo-pink-blue-mobile.svg" width="146" height="40" alt="PINK">
-        </a>
-      </div>
-      <ul class="social-list">
-        <li class="social-list__item social-list__item--twitter">
-          <a href="#">Twitter</a>
-        </li>
+      <div class="container">
+        <div class="page-footer__menu">
+          <div class="page-footer__pink-logo">
+            <a>
+              <img src="../img/logo-pink-blue-mobile.svg" width="146" height="40" alt="PINK">
+            </a>
+          </div>
+          <ul class="social-list">
+            <li>
+              <a class="social-list__item social-list__item--twitter" href="#"><span class="visually-hidden">Twitter</span></a>
+            </li>
 
-        <li class="social-list__item social-list__item--facebook">
-          <a href="#">Facebook</a>
-        </li>
+            <li>
+              <a class="social-list__item social-list__item--facebook" href="#"><span class="visually-hidden">Facebook</span></a>
+            </li>
 
-        <li class="social-list__item social-list__item--youtube">
-          <a href="#">Youtube</a>
-        </li>
-      </ul>
-      <div class="developer">
-        <span>Разработано
-          <a href="http://htmlacademy.ru">
-            <img class="developer__logo" src="img/logo-htmlacademy.svg" width="26" height="34" alt="HTML Academy">
-          </a>
-        </span>
+            <li>
+              <a class="social-list__item social-list__item--youtube" href="#"><span class="visually-hidden">Youtube</span></a>
+            </li>
+          </ul>
+          <div class="developer">
+            <span>Разработано</span>
+            <div>
+              <a href="http://htmlacademy.ru">
+                <img class="developer__logo" src="img/logo-htmlacademy.svg" width="26" height="34" alt="HTML Academy">
+              </a>
+            </div>
+            </span>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
