--- a/source/index.html
+++ b/source/index.html
@@ -75,32 +75,36 @@
       </section>
 
       <div class="proposal-section">
-        <p class="proposal-section__question">Устали от серости мегаполиса?</p>
-        <p class="proposal-section__answer">Нам есть, что вам предложить!</p>
+        <div class="container">
+          <p class="proposal-section__question">Устали от серости мегаполиса?</p>
+          <p class="proposal-section__answer">Нам есть, что вам предложить!</p>
+        </div>
       </div>
 
       <section class="features">
         <div class="features__wrapper">
           <h2 class="visually-hidden">Преимущества приложения</h2>
+          <div class="container">
           <ul class="features__list">
             <li class="features__item">
-              <img class="features__image" src="img/iphone-screen-mobile@1x.png" width="157" height="320" alt="Приложение PINK">
+              <!-- <img class="features__image" src="img/iphone-screen-mobile@1x.png" width="157" height="320" alt="Приложение PINK"> -->
               <h3 class="features__title">Поднимает настроение</h3>
               <p class="features__description">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
             </li>
 
             <li class="features__item">
-              <img class="features__image" src="img/iphone-screen-mobile@1x.png" width="157" height="320" alt="Приложение PINK">
+             <!--  <img class="features__image" src="img/iphone-screen-mobile@1x.png" width="157" height="320" alt="Приложение PINK"> -->
               <h3 class="features__title">Меняет мир вокруг</h3>
               <p class="features__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
             </li>
 
             <li class="features__item">
-              <img class="features__image" src="img/iphone-screen-mobile@1x.png" width="157" height="320" alt="Приложение PINK">
+             <!--  <img class="features__image" src="img/iphone-screen-mobile@1x.png" width="157" height="320" alt="Приложение PINK"> -->
               <h3 class="features__title">Заводит новых друзей</h3>
               <p class="features__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
             </li>
           </ul>
+         </div>
         </div>
       </section>
 
@@ -138,90 +142,112 @@
             </li> -->
           </ul>
         </div>
-        <p class="reviews__toggles slider__toggles">
-          <button class="slider__toogle" type="button">1</button>
-          <button class="slider__toogle" type="button">2</button>
-          <button class="slider__toogle" type="button">3</button>
-        </p>
+        <div class="reviews__toggles slider-menu">
+          <div class="slider-menu__container">
+            <label class="slider-menu__toogle"><span class="visually-hidden">1</span></label>
+            <label class="slider-menu__toogle"><span class="visually-hidden">2</span></label>
+            <label class="slider-menu__toogle"><span class="visually-hidden">3</span></label>
+          </div>
+        </div>
         </div>
 
       </section>
 
       <section class="prices">
         <div class="prices__wrapper slider">
-        <table class="prices__list">
-          <tr>
-            <!-- <td></td> -->
-            <!-- <td class="prices__title">База <span class="prices__cost">1,99 USD</span></td> -->
-            <td class="prices__title">Стандарт <span class="prices__cost">3,99 USD</span></td>
-            <!-- <td class="prices__title">Анлим <span class="prices__cost">9,99 USD</span></td> -->
-          </tr>
-          <tr>
-            <td class="prices__value">Розовый фильтр</td>
-          </tr>
-          <tr>
-            <td class="prices__value">Смайлики</td>
-          </tr>
-          <tr>
-            <td class="prices__value">Комментарии</td>
-          </tr>
-        </table>
-        <!-- другие цены -->
-        <p class="prices__toggles slider__toggles">
-          <button class="slider__toogle" type="button">1</button>
-          <button class="slider__toogle" type="button">2</button>
-          <button class="slider__toogle" type="button">3</button>
-        </p>
+          <div class="container">
+          <table class="prices__list">
+            <tr>
+              <!-- <td></td> -->
+              <td class="prices__title">База<br><span class="prices__cost">1,99 USD</span></td>
+              <!-- <td class="prices__title">Стандарт<br><span class="prices__cost">3,99 USD</span></td>
+              <td class="prices__title">Анлим<br><span class="prices__cost">9,99 USD</span></td> -->
+            </tr>
+            <tr>
+              <td class="prices__value">Розовый фильтр</td>
+              <!-- <td class="prices__value">yes</td>
+              <td class="prices__value">yes</td>
+              <td class="prices__value">yes</td> -->
+            </tr>
+            <tr>
+              <td class="prices__value">Смайлики</td>
+              <!-- <td class="prices__value">no</td>
+              <td class="prices__value">yes</td>
+              <td class="prices__value">yes</td> -->
+            </tr>
+            <tr>
+              <td class="prices__value">Комментарии</td>
+              <!-- <td class="prices__value">no</td>
+              <td class="prices__value">no</td>
+              <td class="prices__value">yes</td> -->
+            </tr>
+          </table>
+          <!-- другие цены -->
+          <div class="prices__toggles slider-menu">
+            <div class="slider-menu__container">
+              <label class="slider-menu__toogle"><span class="visually-hidden">1</span></label>
+              <label class="slider-menu__toogle"><span class="visually-hidden">2</span></label>
+              <label class="slider-menu__toogle"><span class="visually-hidden">3</span></label>
+            </div>
+          </div>
+          </div>
         </div>
       </section>
       <section class="contacts">
-        <b class="contacts__message">Остались вопросы? Свяжитесь с нами!</b>
-        <ul class="contacts__list">
-          <li class="contacts__item">
-            <h3 class="contacts__title">Звоните:</h3>
-            <p class="contacts__description">+7 (812) 555-66-66</p>
-          </li>
+        <div class="contacts__container">
+          <b class="contacts__message">Остались вопросы? Свяжитесь с нами!</b>
+          <ul class="contacts__list">
+            <li class="contacts__item">
+              <h3 class="contacts__title">Звоните:</h3>
+              <p class="contacts__description">+7 (812) 555-66-66</p>
+            </li>
 
-          <li class="contacts__item contacts__item--order">
-            <h3 class="contacts__title">Пишите:</h3>
-            <p class="contacts__description">mail@htmlacademy.ru</p>
-          </li>
+            <li class="contacts__item contacts__item--order">
+              <h3 class="contacts__title">Пишите:</h3>
+              <p class="contacts__description">mail@htmlacademy.ru</p>
+            </li>
 
-          <li class="contacts__item">
-            <h3 class="contacts__title">Приезжайте в гости:</h3>
-            <p class="contacts__description">ул. Большая<br>
-            Конюшенная, 19/8</p>
-          </li>
-        </ul>
-        <img src="img/bg-map-mobile@1x.png" width="320" height="645" alt="Карта расположения офиса">
+            <li class="contacts__item">
+              <h3 class="contacts__title">Приезжайте в гости:</h3>
+              <p class="contacts__description">ул. Большая<br>
+              Конюшенная, 19/8</p>
+            </li>
+          </ul>
+         </div>
       </section>
     </main>
 
     <footer class="page-footer page-footer--index">
-      <div class="page-footer__pink-logo">
-        <a>
-          <img src="../img/logo-pink-blue-mobile.svg" width="146" height="40" alt="PINK">
-        </a>
-      </div>
-      <ul class="social-list">
-        <li class="social-list__item social-list__item--twitter">
-          <a href="#">Twitter</a>
-        </li>
+      <div class="container">
+        <div class="page-footer__menu">
+          <div class="page-footer__pink-logo">
+            <a>
+              <img src="../img/logo-pink-blue-mobile.svg" width="146" height="40" alt="PINK">
+            </a>
+          </div>
+          <ul class="social-list">
+            <li>
+              <a class="social-list__item social-list__item--twitter" href="#"><span class="visually-hidden">Twitter</span></a>
+            </li>
 
-        <li class="social-list__item social-list__item--facebook">
-          <a href="#">Facebook</a>
-        </li>
+            <li>
+              <a class="social-list__item social-list__item--facebook" href="#"><span class="visually-hidden">Facebook</span></a>
+            </li>
 
-        <li class="social-list__item social-list__item--youtube">
-          <a href="#">Youtube</a>
-        </li>
-      </ul>
-      <div class="developer">
-        <span>Разработано
-          <a href="http://htmlacademy.ru">
-            <img class="developer__logo" src="img/logo-htmlacademy.svg" width="26" height="34" alt="HTML Academy">
-          </a>
-        </span>
+            <li>
+              <a class="social-list__item social-list__item--youtube" href="#"><span class="visually-hidden">Youtube</span></a>
+            </li>
+          </ul>
+          <div class="developer">
+            <span>Разработано</span>
+            <div>
+              <a href="http://htmlacademy.ru">
+                <img class="developer__logo" src="img/logo-htmlacademy.svg" width="26" height="34" alt="HTML Academy">
+              </a>
+            </div>
+            </span>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
